updateタイミング変更

--- a/公開映画スケジュール.ipynb
+++ b/公開映画スケジュール.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oip1n97WUP_0",
-        "outputId": "53521ee4-0629-4754-87db-e6fb1495af2e"
+        "outputId": "4440ddd9-7979-4dae-d800-a2c966f35fd3"
       },
       "outputs": [
         {
@@ -27,147 +27,143 @@
           "text": [
             "*********************************************\n",
             "GET INFO from /100101/3229/\n",
-            "TRY エンパイア・オブ・ライト\n",
             "TRY 湯道\n",
+            "TRY エンパイア・オブ・ライト\n",
+            "TRY シャイロックの子供たち\n",
             "TRY 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
             "TRY レジェンド＆バタフライ\n",
-            "TRY BTS: Yet To Come in Cinemas\n",
-            "TRY THE FIRST SLAM DUNK\n",
-            "TRY ラーゲリより愛を込めて\n",
-            "TRY 金の国　水の国\n",
-            "TRY アバター　ウェイ・オブ・ウォーター\n",
-            "TRY すずめの戸締まり\n",
-            "TRY イニシェリン島の精霊\n",
-            "TRY 映画　イチケイのカラス\n",
-            "TRY かがみの孤城\n",
-            "TRY Dr.コトー診療所\n",
-            "TRY バビロン\n",
-            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "TRY #マンホール\n",
-            "TRY 日本列島生きもの超伝説　劇場版ダーウィンが来た！\n",
-            "TRY シャイロックの子供たち\n",
-            "TRY アントマン＆ワスプ　クアントマニア\n",
             "TRY BLUE GIANT\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY アントマン＆ワスプ　クアントマニア\n",
+            "TRY BTS: Yet To Come in Cinemas\n",
+            "TRY バビロン\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY すずめの戸締まり\n",
+            "TRY #マンホール\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
             "TRY 映画　佐々木と宮野　卒業編\n",
             "TRY 平野と鍵浦\n",
+            "TRY 日本列島生きもの超伝説　劇場版ダーウィンが来た！\n",
             "*********************************************\n",
             "GET INFO from /100201/3230/\n",
+            "TRY 湯道\n",
+            "TRY 少女は卒業しない\n",
+            "TRY レッドシューズ\n",
+            "TRY シャイロックの子供たち\n",
             "TRY 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
             "TRY レジェンド＆バタフライ\n",
             "TRY THE FIRST SLAM DUNK\n",
+            "TRY アントマン＆ワスプ　クアントマニア\n",
             "TRY RRR\n",
+            "TRY 別れる決心\n",
             "TRY ラーゲリより愛を込めて\n",
-            "TRY 金の国　水の国\n",
-            "TRY アバター　ウェイ・オブ・ウォーター\n",
             "TRY すずめの戸締まり\n",
+            "TRY アバター　ウェイ・オブ・ウォーター\n",
             "TRY 映画　イチケイのカラス\n",
             "TRY かがみの孤城\n",
-            "TRY タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
-            "TRY シャイロックの子供たち\n",
-            "TRY アントマン＆ワスプ　クアントマニア\n",
-            "TRY かぐや様は告らせたい　ファーストキッスは終わらない\n",
-            "TRY 別れる決心\n",
             "*********************************************\n",
             "GET INFO from /100201/3231/\n",
-            "TRY ウルトラマンデッカー最終章　旅立ちの彼方へ…\n",
-            "TRY エンパイア・オブ・ライト\n",
             "TRY 湯道\n",
+            "TRY エンパイア・オブ・ライト\n",
+            "TRY ウルトラマンデッカー最終章　旅立ちの彼方へ…\n",
+            "TRY シャイロックの子供たち\n",
             "TRY 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
             "TRY レジェンド＆バタフライ\n",
-            "TRY BTS: Yet To Come in Cinemas\n",
-            "TRY THE FIRST SLAM DUNK\n",
-            "TRY 仕掛人・藤枝梅安\n",
-            "TRY ラーゲリより愛を込めて\n",
-            "TRY 金の国　水の国\n",
-            "TRY アバター　ウェイ・オブ・ウォーター\n",
-            "TRY すずめの戸締まり\n",
-            "TRY イニシェリン島の精霊\n",
-            "TRY 映画　イチケイのカラス\n",
-            "TRY かがみの孤城\n",
-            "TRY Dr.コトー診療所\n",
-            "TRY スクロール\n",
-            "TRY タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
-            "TRY バビロン\n",
-            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "TRY エゴイスト\n",
-            "TRY #マンホール\n",
-            "TRY アイカツ！ 10th STORY 未来へのSTARWAY\n",
-            "TRY シャイロックの子供たち\n",
-            "TRY アントマン＆ワスプ　クアントマニア\n",
-            "TRY 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
             "TRY BLUE GIANT\n",
+            "TRY THE FIRST SLAM DUNK\n",
+            "TRY アントマン＆ワスプ　クアントマニア\n",
+            "TRY エゴイスト\n",
+            "TRY BTS: Yet To Come in Cinemas\n",
+            "TRY バビロン\n",
+            "TRY ラーゲリより愛を込めて\n",
+            "TRY すずめの戸締まり\n",
+            "TRY #マンホール\n",
+            "TRY 仕掛人・藤枝梅安\n",
+            "TRY 金の国　水の国\n",
+            "TRY 映画　イチケイのカラス\n",
+            "TRY Dr.コトー診療所\n",
+            "TRY かがみの孤城\n",
+            "TRY 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "TRY アイカツ！ 10th STORY 未来へのSTARWAY\n",
             "*********************************************\n",
             "*** THEATER: ユナイテッド・シネマ 前橋 ***\n",
-            "MOVIE: エンパイア・オブ・ライト\n",
             "MOVIE: 湯道\n",
+            "MOVIE: エンパイア・オブ・ライト\n",
+            "MOVIE: シャイロックの子供たち\n",
             "MOVIE: 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
             "MOVIE: レジェンド＆バタフライ\n",
-            "MOVIE: BTS: Yet To Come in Cinemas\n",
-            "MOVIE: THE FIRST SLAM DUNK\n",
-            "MOVIE: ラーゲリより愛を込めて\n",
-            "MOVIE: 金の国　水の国\n",
-            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
-            "MOVIE: すずめの戸締まり\n",
-            "MOVIE: イニシェリン島の精霊\n",
-            "MOVIE: 映画　イチケイのカラス\n",
-            "MOVIE: かがみの孤城\n",
-            "MOVIE: Dr.コトー診療所\n",
-            "MOVIE: バビロン\n",
-            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "MOVIE: #マンホール\n",
-            "MOVIE: 日本列島生きもの超伝説　劇場版ダーウィンが来た！\n",
-            "MOVIE: シャイロックの子供たち\n",
-            "MOVIE: アントマン＆ワスプ　クアントマニア\n",
             "MOVIE: BLUE GIANT\n",
+            "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: アントマン＆ワスプ　クアントマニア\n",
+            "MOVIE: BTS: Yet To Come in Cinemas\n",
+            "MOVIE: バビロン\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: #マンホール\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
             "MOVIE: 映画　佐々木と宮野　卒業編\n",
             "MOVIE: 平野と鍵浦\n",
+            "MOVIE: 日本列島生きもの超伝説　劇場版ダーウィンが来た！\n",
             "*********************************************\n",
             "*** THEATER: 109シネマズ高崎 ***\n",
+            "MOVIE: 湯道\n",
+            "MOVIE: 少女は卒業しない\n",
+            "MOVIE: レッドシューズ\n",
+            "MOVIE: シャイロックの子供たち\n",
             "MOVIE: 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
             "MOVIE: レジェンド＆バタフライ\n",
             "MOVIE: THE FIRST SLAM DUNK\n",
+            "MOVIE: アントマン＆ワスプ　クアントマニア\n",
             "MOVIE: RRR\n",
+            "MOVIE: 別れる決心\n",
             "MOVIE: ラーゲリより愛を込めて\n",
-            "MOVIE: 金の国　水の国\n",
-            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
             "MOVIE: すずめの戸締まり\n",
+            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
             "MOVIE: 映画　イチケイのカラス\n",
             "MOVIE: かがみの孤城\n",
-            "MOVIE: タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
-            "MOVIE: シャイロックの子供たち\n",
-            "MOVIE: アントマン＆ワスプ　クアントマニア\n",
-            "MOVIE: かぐや様は告らせたい　ファーストキッスは終わらない\n",
-            "MOVIE: 別れる決心\n",
             "*********************************************\n",
             "*** THEATER: イオンシネマ高崎 ***\n",
-            "MOVIE: ウルトラマンデッカー最終章　旅立ちの彼方へ…\n",
-            "MOVIE: エンパイア・オブ・ライト\n",
             "MOVIE: 湯道\n",
+            "MOVIE: エンパイア・オブ・ライト\n",
+            "MOVIE: ウルトラマンデッカー最終章　旅立ちの彼方へ…\n",
+            "MOVIE: シャイロックの子供たち\n",
             "MOVIE: 「鬼滅の刃」上弦集結、そして刀鍛冶の里へ\n",
             "MOVIE: レジェンド＆バタフライ\n",
-            "MOVIE: BTS: Yet To Come in Cinemas\n",
+            "MOVIE: BLUE GIANT\n",
             "MOVIE: THE FIRST SLAM DUNK\n",
-            "MOVIE: 仕掛人・藤枝梅安\n",
-            "MOVIE: ラーゲリより愛を込めて\n",
-            "MOVIE: 金の国　水の国\n",
-            "MOVIE: アバター　ウェイ・オブ・ウォーター\n",
-            "MOVIE: すずめの戸締まり\n",
-            "MOVIE: イニシェリン島の精霊\n",
-            "MOVIE: 映画　イチケイのカラス\n",
-            "MOVIE: かがみの孤城\n",
-            "MOVIE: Dr.コトー診療所\n",
-            "MOVIE: スクロール\n",
-            "MOVIE: タイタニック　ジェームズ・キャメロン25周年3Dリマスター\n",
-            "MOVIE: バビロン\n",
-            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
-            "MOVIE: エゴイスト\n",
-            "MOVIE: #マンホール\n",
-            "MOVIE: アイカツ！ 10th STORY 未来へのSTARWAY\n",
-            "MOVIE: シャイロックの子供たち\n",
             "MOVIE: アントマン＆ワスプ　クアントマニア\n",
-            "MOVIE: 妖怪ウォッチ♪　ジバニャンvsコマさん　もんげー大決戦だニャン\n",
-            "MOVIE: BLUE GIANT\n"
+            "MOVIE: エゴイスト\n",
+            "MOVIE: BTS: Yet To Come in Cinemas\n",
+            "MOVIE: バビロン\n",
+            "MOVIE: ラーゲリより愛を込めて\n",
+            "MOVIE: すずめの戸締まり\n",
+            "MOVIE: #マンホール\n",
+            "MOVIE: 仕掛人・藤枝梅安\n",
+            "MOVIE: 金の国　水の国\n",
+            "MOVIE: 映画　イチケイのカラス\n",
+            "MOVIE: Dr.コトー診療所\n",
+            "MOVIE: かがみの孤城\n",
+            "MOVIE: 名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\n",
+            "MOVIE: アイカツ！ 10th STORY 未来へのSTARWAY\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'spreadsheetId': '11HxD-a2Sq8DXPEEiVfZmNtEqkdOxJKZckPRkkT0GOJY',\n",
+              " 'updatedRange': \"'映画館'!B2:J501\",\n",
+              " 'updatedRows': 500,\n",
+              " 'updatedColumns': 9,\n",
+              " 'updatedCells': 4500}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ],
       "source": [
@@ -270,6 +266,8 @@
         "# 既存を削除\n",
         "ss.values_clear(f'\\'{sheetName}\\'!B2:J501')\n",
         "\n",
+        "ds = sheet.range(f'B2:J501')\n",
+        "\n",
         "row = rowStart\n",
         "# 日時１つを１行として書き込み\n",
         "for theater in theaters:\n",
@@ -288,31 +286,32 @@
         "        dtEnd = dt + datetime.timedelta(minutes = int(movie[\"time\"]) + 10)\n",
         "        dateStr = dt.strftime('%Y/%m/%d')\n",
         "        timeStartStr = dt.strftime('%H:%M:%S')\n",
-        "        timeStartStrAbout = dt.strftime('%p%H時台')\n",
+        "        timeStartStrAbout = dt.strftime('%H時台')\n",
         "        timeEndStr = dtEnd.strftime('%H:%M:%S')\n",
         "\n",
         "        # 書き込みデータ\n",
-        "        ds= sheet.range(f'B{row}:J{row}')\n",
-        "        ds[0].value = movie[\"name\"]\n",
-        "        ds[1].value = schedule[\"type\"]\n",
-        "        ds[2].value = dateStr\n",
-        "        ds[3].value = timeStartStrAbout\n",
-        "        ds[4].value = timeStartStr\n",
-        "        ds[5].value = timeEndStr\n",
-        "        ds[6].value = movie[\"time\"]\n",
-        "        ds[7].value = theater[\"name\"]\n",
-        "        ds[8].value = movie[\"link\"]\n",
-        "        # 書き込み\n",
-        "        sheet.update_cells(ds)\n",
+        "        offset = (row - rowStart) * 9\n",
+        "        ds[offset + 0].value = movie[\"name\"]\n",
+        "        ds[offset + 1].value = schedule[\"type\"]\n",
+        "        ds[offset + 2].value = dateStr\n",
+        "        ds[offset + 3].value = timeStartStrAbout\n",
+        "        ds[offset + 4].value = timeStartStr\n",
+        "        ds[offset + 5].value = timeEndStr\n",
+        "        ds[offset + 6].value = movie[\"time\"]\n",
+        "        ds[offset + 7].value = theater[\"name\"]\n",
+        "        ds[offset + 8].value = movie[\"link\"]\n",
         "\n",
-        "        row = row + 1\n"
+        "        row = row + 1\n",
+        "\n",
+        "# 書き込み\n",
+        "sheet.update_cells(ds)\n"
       ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZ32c2Mw5Eg1rR991ccbxm",
+      "authorship_tag": "ABX9TyOkh2TQKS/P+0wslV3BJ3Qh",
       "include_colab_link": true
     },
     "kernelspec": {
