Colaboratory を使用して作成しました

--- a/映画情報検索.ipynb
+++ b/映画情報検索.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNu4P4mX8UMZMzWWpcMwlTg",
+      "authorship_tag": "ABX9TyNKV9Ha5Fbgr4Pl8Czd2KGx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,9 @@
         "dataStart='映画タイトル'\n",
         "\n",
         "# 検索対象サイト\n",
-        "baseURL = 'https://eiga.com'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "baseURL = 'https://eiga.com'\n",
+        "\n",
+        "\n",
         "import requests\n",
         "import re\n",
         "\n",
@@ -63,17 +60,9 @@
         "  soup = BeautifulSoup(html.content, \"html.parser\")\n",
         "  # パースしたHTMLから特定の要素を抽出します。結果はリストで返ってきます。\n",
         "  elem = soup.select(selector)\n",
-        "  return elem"
-      ],
-      "metadata": {
-        "id": "ZfnSMF-Zu-ul"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "  return elem\n",
+        "\n",
+        "\n",
         "import urllib.parse\n",
         "\n",
         "# 映画名で検索\n",
@@ -101,34 +90,19 @@
         "      'info':infos[0].get_text(\", \") if len(infos) > 0 else \"\",\n",
         "      'director':directors[0].get_text() if len(directors) > 0 else \"\",\n",
         "      'casts':list(map(lambda html:html.get_text(), casts))[:2]\n",
-        "  }\n"
-      ],
-      "metadata": {
-        "id": "7sbqw637v8DL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "  }\n",
+        "\n",
+        "\n",
         "# 認証のためのコード\n",
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
         "import gspread\n",
         "from google.auth import default\n",
         "creds, _ = default()\n",
-        "gc = gspread.authorize(creds)"
-      ],
-      "metadata": {
-        "id": "yBM1RDjJ-RTn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "gc = gspread.authorize(creds)\n",
+        "\n",
+        "\n",
+        "\n",
         "ss = gc.open_by_key(ssID)\n",
         "sheet = ss.worksheet(sheetName)\n",
         "\n",
@@ -168,30 +142,6 @@
         "  # 書き込み\n",
         "  sheet.update_cell(row, 2, info)\n",
         "  sheet.update_cell(row, 3, movieInfo[\"image\"])\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WlYt9wHz-U-H",
-        "outputId": "bedb7cd5-50a5-42e0-d325-4e2a780cbe7d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[情報] \"映画　イチケイのカラス\"はB列が空ではないのでスキップ\n",
-            "[情報] \"SLAM DUNK\"はB列が空ではないのでスキップ\n",
-            "[情報] \"Dr.コトー診療所\"で検索開始\n",
-            "  →\"Dr.コトー診療所\"で更新開始\n",
-            "[情報] \"名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\"で検索開始\n",
-            "  →\"名探偵コナン　灰原哀物語　黒鉄のミステリートレイン\"で更新開始\n",
-            "[情報] \"RRR\"で検索開始\n",
-            "  →\"RRR\"で更新開始\n"
-          ]
-        }
       ]
     },
     {
